fix bug cannot get the image localhost:3333/abc.png because typeOrmConfig put on root folder and when build the file will have dist/src this one will got a issue cannot get image

--- a/views/index.edge
+++ b/views/index.edge
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <span> Welcome to Learn TEch Tips BlogSpot - I am Zidane</span>
+  <span> Welcome to Learn Tech Tips BlogSpot - I am Zidane</span>
   {{ message }}
 </body>
 
